# gambpang-studio

./: .dir-locals.el  .gitignore  README.md  cabal.project  hie.yaml
animation/: CHANGELOG.md  LICENSE  gambpang-studio-animation.cabal
animation/src/GambPang/: Animation.hs
animation/src/GambPang/Animation/: Animated.hs  Bitmap.hs  Drawing.hs  Field2D.hs  LinearAlgebra.hs  Path.hs  Rectangle.hs  Render.hs  Rigging.hs  Scene.hs  Time.hs  Utils.hs
animation/src/GambPang/Animation/Drawing/: Grid.hs  Internal.hs
knots/: CHANGELOG.md  gambpang-knots.cabal
knots/exec/: Main.hs
knots/src/GambPang/: Knots.hs
knots/src/GambPang/Knots/: Image.hs  Pattern.hs  Pixels.hs  Random.hs  Tiles.hs
knots/src/GambPang/Knots/Pattern/: Encoding.hs
works/: CHANGELOG.md  Main.hs  gambpang-studio-works.cabal
works/src/GambPang/: Files.hs
works/src/GambPang/Animation/: Bars.hs  Boxes.hs  ColorStyle.hs  Dots.hs  Piece.hs  Scrollers.hs  Snowflake.hs  Spinfield.hs  Symmetry.hs  Utils.hs  Vignette.hs
