cabal-version:       2.0
name:                gambpang-studio-animation
version:             0.1.0.0
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
copyright:           Ian Shipman (c) 2020
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:   src/
  ghc-options:      -Wall

  exposed-modules:
    GambPang.Animation
    GambPang.Animation.Drawing
    GambPang.Animation.Drawing.Grid
    GambPang.Animation.Field2D
    GambPang.Animation.Rectangle

  other-modules:
    GambPang.Animation.Animated
    GambPang.Animation.Bitmap
    GambPang.Animation.Drawing.Internal
    GambPang.Animation.LinearAlgebra
    GambPang.Animation.Path
    GambPang.Animation.Render
    GambPang.Animation.Rigging
    GambPang.Animation.Utils

  build-depends:
      base >=4.12 && <4.17
    , bytestring >=0.10 && <0.12
    , colour ^>=2.3.5
    , containers ^>=0.6
    , JuicyPixels ^>=3.3
    , parallel ^>=3.2
    , transformers >=0.5 && <0.7
