cabal-version:       2.4
name:                gambpang-knots
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
extra-source-files:  CHANGELOG.md

common core
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.13 && <4.15
    , record-hasfield ^>=1.0

library
  import: core
  hs-source-dirs: src
  exposed-modules:
    GambPang.Knots
    GambPang.Knots.Tiles
    GambPang.Knots.Pattern
  build-depends:
      colour ^>=2.3.5
    , containers ^>=0.6
    , JuicyPixels ^>=3.3

executable gambpang-knots
  import: core
  main-is: Main.hs
  hs-source-dirs: exec
  ghc-options: -O2
