cabal-version:       2.4
name:                gambpang-knots
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
extra-source-files:  CHANGELOG.md

common core
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.13 && <4.15
    , JuicyPixels ^>=3.3
    , record-hasfield ^>=1.0
    , text ^>=1.2
    , transformers ^>=0.5

library
  import: core
  hs-source-dirs: src
  exposed-modules:
    GambPang.Knots.Pixels
    GambPang.Knots.Tiles
    GambPang.Knots.Pattern
    GambPang.Knots.Pattern.Encoding
  build-depends:
      attoparsec
    , colour ^>=2.3.5
    , containers ^>=0.6

executable gambpang-knots
  import: core
  main-is: Main.hs
  hs-source-dirs: exec
  ghc-options: -O2
  build-depends:
      bytestring >=0.10 && <0.12
    , optparse-applicative ^>=0.16
    , gambpang-knots
