cabal-version:       2.4
name:                gambpang-studio-works
version:             0.1.0.0
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
copyright:           Ian Shipman (c) 2020
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      base >=4.13  && <4.15
    , bytestring >=0.10 && <0.12
    , containers ^>=0.6
    , gambpang-studio-animation ^>=0.1
    , JuicyPixels ^>=3.3
    , text ^>=1.2

library
  import: shared
  hs-source-dirs: src/

  exposed-modules:
    GambPang.Animation.ColorStyle
    GambPang.Animation.Piece
    GambPang.Animation.Utils

    GambPang.Animation.Bars
    GambPang.Animation.Boxes
    GambPang.Animation.Dots
    GambPang.Animation.Scrollers
    GambPang.Animation.Snowflake

  build-depends:
      aeson ^>=1.5
    , base64-bytestring >=1.0 && <1.3
    , colour ^>=2.3.5
    , lucid ^>=2.9
    , clay ^>=0.13
    , transformers ^>=0.5

executable gambpang-studio-works
  import: shared
  main-is: Main.hs
  ghc-options: -O2 -threaded
  build-depends:
      async ^>=2.2
    , filepath ^>=1.4
    , gambpang-studio-works
    , optparse-applicative ^>=0.16
