cabal-version:       2.4
name:                gambpang-studio-works
version:             0.1.0.0
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
copyright:           Ian Shipman (c) 2020
build-type:          Simple

extra-source-files:
  CHANGELOG.md

data-files:
  data/fonts/*.ttf

common shared
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson ^>=1.5
    , base >=4.13  && <4.15
    , bytestring >=0.10 && <0.12
    , containers ^>=0.6
    , gambpang-studio-animation ^>=0.1
    , JuicyPixels ^>=3.3
    , lucid ^>=2.9
    , text ^>=1.2
    , transformers ^>=0.5

library
  import: shared
  hs-source-dirs: src/

  exposed-modules:
    GambPang.Animation.ColorStyle
    GambPang.Animation.Piece
    GambPang.Animation.Utils
    GambPang.Animation.Vignette

    GambPang.Animation.Bars
    GambPang.Animation.Boxes
    GambPang.Animation.Dots
    GambPang.Animation.Scrollers
    GambPang.Animation.Snowflake
    GambPang.Animation.Spinfield

  other-modules:
    GambPang.Files

  build-depends:
      base16-bytestring ^>=1.0
    , base64-bytestring >=1.0 && <1.3
    , clay ^>=0.13
    , colour ^>=2.3.5
    , cryptonite >=0.25 && <0.28
    , file-embed >=0.0.12 && <0.0.13
    , memory ^>=0.15

executable gambpang-studio-works
  import: shared
  main-is: Main.hs
  ghc-options: -O2 -threaded

  other-modules:
    Paths_gambpang_studio_works

  autogen-modules:
    Paths_gambpang_studio_works

  build-depends:
      async ^>=2.2
    , directory ^>=1.3
    , filepath ^>=1.4
    , gambpang-studio-works
    , optparse-applicative ^>=0.16
    , yaml ^>=0.11
